--- a/css/styles.css
+++ b/css/styles.css
@@ -1,19 +1,20 @@
 .hidden {
   display: none;
 }
-
+/* 
 img {
-  width: 25%;
+  width: 28%;
   border-radius: 80%;
   margin-left: auto;
   margin-right: auto; 
+  margin-bottom: 10px; 
   text-align: center; 
 
 }
 
 h1 {
   text-align: center;
-  background-color:rgb(38, 236, 236)
+  background-color:rgb(203, 236, 38)
 }
 
 #intro {
@@ -44,3 +45,33 @@ body {
   font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
   background-color: rgb(248, 248, 250); 
 }
+
+label {
+  font-family:Verdana, Geneva, Tahoma, sans-serif
+} */
+
+/* #ruby {
+  background-color: rgb(13, 13, 233); 
+  padding-left: 10px; 
+}
+
+#javascript {
+  background-color: purple
+  padding-left: 10px; 
+}
+
+#csharp {
+  background-color: yellow; 
+  padding-left: 10px; 
+}
+
+#python {
+  background-color: greenyellow; 
+  padding-left: 10px; 
+}
+
+#rust {
+  background-color: rgb(235, 171, 171); 
+  padding-left: 10px; 
+  border: dotted black; 
+} */
